fixing slider background alignment - a little bit

--- a/assets/sass/components/_body.scss
+++ b/assets/sass/components/_body.scss
@@ -90,6 +90,10 @@ html body {
 		.FA_overall_container_smoke {
 			border: none;
 		}
+		.FA_article {
+			background-position: center center;
+			background-size: cover;
+		}
 
 		.entry-header {
 			clear: both;
